# zlmediakit_rust

./: Cargo.toml  build.rs
examples/: simple_rtsp_client.rs
src/: lib.rs  main.rs
src/interface/: interface.rs
src/zl_media/: mod.rs  zl_media.rs
zlmediakit_lib/: CMakeLists.txt  CustomSocket.cpp  CustomSocket.h  MergedBuffer.h  ZLMedia.cpp  ZLMedia.h  interface.h  utils.h
